# OpenGl

./: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
src/: mainCamera.cpp  mainMesh.cpp  mainModel.cpp  mainTransformation.cpp  mainTriangle.cpp  mainWindow.cpp  main_Texture.cpp  organizer.cpp
src/shaders/: Camera.cpp  Camera.h  EBO.cpp  EBO.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ShaderClass.cpp  ShaderClass.h  Texture.cpp  Texture.h  VBO.h  basicFragment.fs  basicVertex.vs
